# tea

./: .gitignore  .htaccess  .readthedocs.yaml  CITATION.cff  GUI_ARCHITECTURE.md  LICENSE  README.md  deploy.sh  git.txt  netlify.toml  passenger_wsgi.py  pyproject.toml  start.sh
.github/workflows/: python-package.yml  python-publish.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  plant_factory.py  schemas.py  state.py  util.py
backend/app/presets/: geothermal_heat_pump.json  geothermal_power_plant.json  h2_electrolysis.json  h2_methane_pyrolysis.json  h2_smr.json  (+1 more)
docs/: citation.rst  conf.py  contributing.rst  examples.rst  gui.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/_static/: caption_links.js  custom.css
docs/api/: analysis.rst  equipment.rst  index.rst  io.rst  plant.rst  plotting.rst
docs/user_guide/: analysis.rst  equipment.rst  index.rst  io_workflow.rst  plant.rst  plotting.rst
examples/: case_study_1.ipynb  case_study_1_with_JSON.ipynb  case_study_2.ipynb  case_study_3.ipynb
examples/aspen_plus_sims/: simple_mp_plant.apw  simple_smr_plant.apw
examples/input_configs/: analysis-1.json  analysis-2.json  mp_equipment.json  mp_plant.json  smr_equipment.json  smr_plant.json  we_equipment.json  we_plant.json
frontend/: index.html  package-lock.json  package.json
frontend/public/: _redirects
frontend/src/: App.css  App.tsx
netlify/functions/: api.py  requirements.txt
src/openpytea/: __init__.py  analysis.py  equipment.py  helpers.py  io.py  plant.py  plotting.py
tests/: conftest.py  test_analysis.py  test_equipment.py  test_plant.py  test_plotting.py  test_run_tea.py  test_smoke.py
(+21 files in other folders)
