[project]
name = "OpenPyTEA"
version = "2.1.0"
description = "OpenPyTEA: An open-source Python toolkit for techno-economic assessment of process plants with economic sensitivity and uncertainty evaluation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "chemical-engineering",
    "process-design",
    "power-plant",
    "techno-economic-analysis",
    "process-plant",
]
requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=1.5",
    "scienceplots>=2.2.0",
    "scipy>=1.10",
    "seaborn>=0.12",
    "tqdm>=4.64",
    "jinja2>=3.1",
]

maintainers = [
  { name = "Panji B. Tamarona", email = "P.B.Tamarona@tudelft.nl" }
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
ipython = [
    "ipython>=8.0",
]

[urls]
Repository = "https://github.com/PBTamarona/OpenPyTEA"
Issues = "https://github.com/PBTamarona/OpenPyTEA/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 60
target-version = ['py310']

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openpytea = ["data/*.csv"]

[tool.ruff]
# Only check Python files (default, but explicit is cleaner)
extend-include = ["*.py"]
extend-exclude = ["*.ipynb", "notebooks/", ".ipynb_checkpoints/"]

# Optional but recommended
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]  # errors, flakes, warnings
ignore = []

[tool.ruff.format]
quote-style = "double"
